# find-stuff

./: AGENT_RULES.md  CHANGELOG.md  README.md  distlift.toml  pyproject.toml
.github/workflows/: publish.yml
find_stuff/: cli.py  indexing.py  models.py
tests/: test_cli.py  test_indexing.py  test_models.py
